--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "intro2angular": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "intro2angular"
+    }
+  },
+  "defaultProject": "intro2angular",
+  "cli": {
+    "analytics": "b6b64eec-9f73-4b44-a576-2ff7b9bfe9c8"
+  }
 }
